# poe-watcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RULES.md  build-install.ps1  build.cmd  dev.cmd  overlay.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/: CONTRIB.md  RUNBOOK.md
python/: pob_bridge.py  requirements.txt
src/: App.tsx  OverlayApp.tsx  index.css  main.tsx  overlay-main.tsx  overlay.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  commands.rs  lib.rs  log_watcher.rs  main.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_add_breakpoint_tracking.sql  003_add_overlay_position.sql  004_add_overlay_config.sql  005_update_overlay_defaults.sql  006_add_hotkey_settings.sql  007_add_manual_split_hotkey.sql  008_add_class_to_gold_splits.sql
src/components/: Sidebar.tsx
src/components/Comparison/: ComparisonView.tsx  index.ts
src/components/History/: AddReferenceRunModal.tsx  AnalyticsTab.tsx  HistoryView.tsx  RunsTab.tsx
src/components/Overlay/: OverlayBreakpoints.tsx  OverlaySplit.tsx  (+3 more)
src/config/: breakpoints.ts  wizardRoutes.ts
src/hooks/: useHotkeys.ts  useOverlaySync.ts  useTauriEvents.ts  useUpdateChecker.ts
src/stores/: runStore.ts  settingsStore.ts  snapshotStore.ts
src/types/: index.ts
src/utils/: jsonExport.ts  pobExport.ts
(+18 files in other folders)
