[package]
name = "poe-watcher"
version = "0.1.0"
description = "Local Path of Exile Speedrun Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "poe_watcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system watching
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["sync", "time", "fs", "io-util"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for log parsing
regex = "1"

# Lazy initialization
once_cell = "1"
lazy_static = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# URL encoding
urlencoding = "2"

# Base64 encoding
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
